crates/preprocessor/tests/snapshots/main__multiline_block_comment_2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 275
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
int foo;





int bar;

