crates/preprocessor/tests/snapshots/main__no_preprocessor_directives.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 34
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---

        int foo;
        int bar;
        
