crates/preprocessor/tests/snapshots/main__stringizing_1.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 814
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%0) #%0
char foo[8] = "foo";
