crates/preprocessor/tests/snapshots/main__stringizing_2-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 719
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      15,
      16,
      15,
      16
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      21,
      22,
      21,
      22
    ],
    [
      23,
      26,
      23,
      26
    ],
    [
      27,
      28,
      27,
      28
    ],
    [
      28,
      29,
      28,
      29
    ],
    [
      29,
      30,
      29,
      30
    ],
    [
      31,
      35,
      31,
      35
    ],
    [
      36,
      39,
      36,
      39
    ],
    [
      39,
      40,
      39,
      40
    ],
    [
      40,
      41,
      40,
      41
    ],
    [
      41,
      42,
      41,
      42
    ],
    [
      43,
      44,
      43,
      44
    ],
    [
      58,
      59,
      60,
      61
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 45,
        "end": 48
      },
      "expanded_range": {
        "start": 44,
        "end": 60
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
