crates/preprocessor/tests/snapshots/main__stringizing_2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 823
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%0,%1) #%0 ... #%1
char foo[8] = "foo" ... "bar";
