crates/preprocessor/tests/snapshots/main__stringizing_3-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      20,
      24,
      20,
      24
    ],
    [
      25,
      28,
      25,
      28
    ],
    [
      28,
      29,
      28,
      29
    ],
    [
      29,
      30,
      29,
      30
    ],
    [
      30,
      31,
      30,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      48,
      49,
      45,
      46
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 34,
        "end": 48
      },
      "expanded_range": {
        "start": 33,
        "end": 45
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
